[tool.poetry]
name = "ai-art-data"
version = "0.1.0"
description = ""
authors = ["Rowan <piesrule123@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_art_data"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.6"
pyyaml = "^6.0.1"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
